wip. postgres test still fails. also fixed #85
